feat: novos campos de registro do login estrangeiro

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -106,3 +106,7 @@ en:
           help_title: Instructions to upload your selfie
           help_text: Please upload a selfie photo side by side with your document. Your face must be clean, without glasses or masks and looking straight ahead.
           error_text: The image provided does not match the criteria. See the help instructions to provide a better photo.
+        document_image:
+          label: Document image
+          button_label: Choose a file
+          help_title: Document image
