--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -9,6 +9,8 @@ es:
         location: Localización
         phone_number: Teléfono
         postal_code: Código postal
+      id_document_upload:
+        second_verification_attachment: Foto selfie sosteniendo el documento
   decidim:
     verifications:
       id_documents:
