--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -37,6 +37,10 @@ pt-BR:
     components:
       extra_user_fields:
         name: ExtraUserFields
+      proposals:
+        settings:
+          global:
+            enabled_for_foreign_users: Usuários estrangeiros podem participar
     extra_user_fields:
       admin:
         exports:
