--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,33 @@ en:
               sla_status:
                 on_time: "%{time_left} remaining to feedback to the user"
                 late: The feedback period is over
+        authorizations:
+          choose:
+            choose_a_type: 'Please select how you want to be verified:'
+            offline: Offline
+            online: Online
+            title: Verify yourself using your identity document
+          create:
+            error: There was a problem uploading your document
+            success: Document successfully uploaded
+          edit:
+            being_reviewed: We're reviewing your documents. You'll be verified shortly
+            offline: Use offline verification
+            online: Use online verification
+            rejection_clarity: Make sure the information is clearly visible in the uploaded image
+            feedback_time: We aim to approve all verifications as fast as possible. However, please note that it can take up to 72 hours.
+            rejection_correctness: Make sure the information entered is correct
+            rejection_notice: There was a problem with your verification. Please try again
+            send: Request verification again
+          new:
+            send: Request verification
+            title: Upload your identity document
+          update:
+            error: There was a problem reuploading your document
+            success: Document successfully reuploaded
+        dni: DNI
+        nie: NIE
+        passport: Passport
     authorization_modals:
       content:
         forbidden:
